--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   <title>Tripline</title>
 </head>
 
-<body class="bg-slate-200">
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
