--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400;500;600;700&family=Lobster&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Livvic&family=Lobster&display=swap');
   </style>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
